gitops/kustomize/hair-booking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hair-booking
  labels:
    app.kubernetes.io/name: hair-booking
