gitops/kustomize/hair-booking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hair-booking
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: hair-booking
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: hair-booking
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
