gitops/kustomize/hair-booking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hair-booking
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: hair-booking
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hair-booking.yolo.scapegoat.dev
      secretName: hair-booking-tls
  rules:
    - host: hair-booking.yolo.scapegoat.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hair-booking
                port:
                  number: 80
